index and notes html reset

--- a/public/notes.html
+++ b/public/notes.html
@@ -48,7 +48,7 @@
             maxlength="28"
             type="text"
             />
-            <textarea class="notes" placeholder="Note Text"></textarea>
+            <textarea class="note-textarea" placeholder="Note Text"></textarea>
             </form>
         </div>
       </div>
